# lens

./: .gitmodules  CMakeLists.txt  shader.frag  shader.vert
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lens.cbp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.cpp
release/: CMakeCache.txt  Makefile  cmake_install.cmake  lens.cbp
res/: normal.frag  normal.vert  quad.frag  quad.vert  raytracer.comp
src/: buffer.h  camera.h  main.cpp  model.h  program.h  random.h  ray.h  rayapx.h  scene.h  storage_buffer.h  texture.h  vao.h  window.h
test/: defl.cpp
